# nn-infer-opt

./: README.md
model-optimizer/: README.md  pytorch_model_optimizer.py  trt_test.py
tf_custom_op/: CMakeLists.txt  kernel_example_test.py
torch_custom_op/: CMakeLists.txt
trt_custom_op/test/: tf_matmul_to_trt.py  torch_matmul_to_trt.py
